--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "sass": "node-sass --watch scss/main.scss css/main.css --source-map css/main.css.map"
+    "sass": "node-sass --watch scss/main.scss css/main.css --output-style compressed --source-map css/main.css.map"
   },
   "repository": {
     "type": "git",
